# azan-market

./: .env  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
apps/: serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_alter_user_managers_alter_basket_user_and_more.py  0003_remove_wishlist_product_wishlist_product.py
apps/models/: __init__.py  product.py  product_handout.py  users.py
apps/serializers/: __init__.py  product.py  users.py
apps/shared/: backends.py  filters.py  permissions.py  verification.py
root/: settings.py  urls.py
